--- a/contenido/corporativo.html
+++ b/contenido/corporativo.html
@@ -3,13 +3,13 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Valoros</title>
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
     <link rel="stylesheet" href="../css/bootstrap.css" />
     <link rel="stylesheet" href="../css/valoros.css" />
     <link rel="icon" href="../img/LogoValoros -icono.ico" />
     <link href='https://unpkg.com/boxicons@2.1.1/css/boxicons.min.css' rel='stylesheet'>
+
     <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=AW-11534101242"></script>
     <script>
@@ -19,6 +19,7 @@
 
         gtag('config', 'AW-11534101242');
     </script>
+
 </head>
 
 <body>
@@ -31,17 +32,20 @@
             <ul class="w-100 pt-5 fs-5">
 
                 <li class="menu-item m-2">
+                    <a class="text-decoration-none" href="/">Inicio</a>
+                </li> 
+                <li class="menu-item m-2">
                     <a class="text-decoration-none" href="corporativo.html">Nuestra historia</a>
                 </li>
                 <li class="menu-item m-2">
                     <a class="text-decoration-none" href="compromiso.html">Nuestro compromiso legal</a>
                 </li>
                 <li class="menu-item m-2">
-                    <a class="text-decoration-none" href="brochure.html">Corporativo</a>
+                    <a class="text-decoration-none active" href="brochure.html">Corporativo</a>
                 </li>
 
                 <li class="menu-item m-2">
-                    <a class="text-decoration-none" href="sostenibilidad.html">sostenibilidad</a>
+                    <a class="text-decoration-none" href="sostenibilidad.html">Sostenibilidad</a>
                 </li>
                 <li class="menu-item m-2">
                     <a class="text-decoration-none" href="contacto.html">Contáctanos</a>
@@ -81,213 +85,73 @@
                     </li> -->
 
                     <li class="has-submenu" style="position: relative;">
-                        <a class="nav-link fs-5 d-flex" href="#">Nosotros
-                            <i class='bx bx-chevron-down fs-2'></i>
-                        </a>
-                        <ul class="submenu py-2" style="background-color: white;z-index: 100; border: 1px solid;">
-                            <li>
-                                <a class="nav-link" href="corporativo.html">Nuestra historia</a>
-                            </li>
-                            <li>
-                                <a class="nav-link" href="compromiso.html">Nuestro compromiso legal</a>
-                            </li>
-                            <li>
-                                <a class="nav-link" href="brochure.html">Corporativo</a>
-                            </li>
-                        </ul>
-                    </li>
+                    <a class="nav-link fs-5 d-flex" href="#">Nosotros
+                        <i class='bx bx-chevron-down fs-2'></i>
+                    </a>
+                    <ul class="submenu py-2" style="background-color: white;z-index: 100; border: 1px solid;">
+                        <li>
+                            <a class="nav-link" href="nuestra-historia.html">Nuestra historia</a>
+                        </li>
+                        <li>
+                            <a class="nav-link" href="compromiso.html">Nuestro compromiso legal</a>
+                        </li>
+                        <li>
+                            <a class="nav-link" href="corporativo.html">Corporativo</a>
+                        </li>
+                    </ul>
+                </li>
 
-                    <li class="nav-item">
-                        <a class="nav-link fs-5" href="contenido/sostenibilidad.html">sostenibilidad</a>
-                    </li>
+                <li class="nav-item">
+                    <a class="nav-link fs-5" href="sostenibilidad.html">sostenibilidad</a>
+                </li>
 
-                    <li class="menu-item">
-                        <a class="text-decoration-none text-white" href="/contenido/contacto.html">Contáctanos</a>
-                    </li>
+                <li class="menu-item">
+                    <a class="text-decoration-none text-white" href="contacto.html">Contáctanos</a>
+                </li>
                 </ul>
             </div>
         </header>
 
-        <main class="container mx-auto mb-5">
+        <main class="mx-auto">
 
             <!-- menu:productos-servicios -->
             <section class="p-0 m-0">
-                <nav class="p-0 m-0 dark" style="background-color: #1A1A1A;">
-                    <ul class="p-0 m-0">
+            <nav class="p-0 m-0 dark" style="background-color: #1A1A1A;">
+                <ul class="p-0 m-0 w-100">
 
-                        <li class="d-flex">
-                            <a class="h-100 p-2" href="/#lineaoro"><img src="/img/goldstart.png" alt=""
-                                    style="width: 40px;height: 40px;">&nbsp;&nbsp; Linea de Oro</a>
-                        </li>
+                    <li class="d-flex w-100">
+                        <a class="h-100 p-2" href="/#lineaoro"><img src="/img/goldstart.png" alt=""
+                                style="width: 30px;height: 30px;">&nbsp;&nbsp; Linea de Oro</a>
+                    </li>
 
-                        <li class="d-flex">
-                            <a class="h-100 p-2" href="/#lineaplata"><img src="/img/silverstart.png" alt=""
-                                    style="width: 40px;height: 40px;"> Linea de Plata</a>
-                        </li>
+                    <li class="d-flex w-100">
+                        <a class="h-100 p-2" href="/#lineaplata"><img src="/img/silverstart.png" alt=""
+                                style="width: 30px;height: 30px;"> Linea de Plata</a>
+                    </li>
 
-                        <li>
-                            <a class="h-100 p-2 d-flex align-items-center" href="Servicios.html">Servicios
-                                Metalúrgicos</a>
-                        </li>
+                    <li class="w-100">
+                        <a class="h-100 p-2 d-flex align-items-center" href="Servicios.html">Servicios
+                            Metalúrgicos</a>
+                    </li>
 
-                    </ul>
-                </nav>
+                </ul>
+            </nav>
+        </section>
+
+            <!-- fin menu:productos-servicios -->
+            <h1 class="text-center my-5 text-white">Corporativo</h1>
+            <section class="text-center">
+                <iframe width="80%" height="450px" src="https://www.youtube.com/embed/uy7NSPctxkE?si=BDNwzhFAn9bE7Xd_"
+                    title="YouTube video player" frameborder="0"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                    allowfullscreen autoplay>
+                </iframe>
             </section>
 
             <section class="mt-5 px-5">
-
-                <h1 class="text-center mb-5">NUESTRA HISTORIA</h1>
-
-                <img class="w-100" src="../img/image00009.webp" alt="">
-
-                <p class="mb-4 mt-2">
-                    Las compañias son el resultado de la mezcla de tres factores humanos fundamentales
-                    según su fundador, en nuestro caso; el conocimiento como guia del camino, el espiritu
-                    emprendedor como pilar de las nuevas creaciones, la tenacidad para soportar los eventos
-                    adversos que desvian el rumbo.
-                </p>
-            </section>
-
-            <section class="mt-5 px-5">
-
-                <div class="row g-2">
-                    <div class="col-12 col-sm-4 d-flex justify-content-center align-items-center">
-                        <div class="circle">
-                            <span class="year">2021</span>
-                        </div>
-                    </div>
-                    <div class="col-12 col-sm-8">
-                        <div class="box">
-                            <p class="mb-4">
-                                Valoros de Colombia fue creada en el año 2021 con el objetivo de atender la demanda
-                                nacional del sector industrial en la fabricación y comercialización de productos a
-                                partir de metales preciosos, por cierto, una demanda que denominamos con gran potencial
-                                y ciertamente insatisfecha.
-                            </p>
-                        </div>
-
-                        <div class="box">
-                            <p class="mb-4">
-                                En el año 2021, adquirimos la maquinaria y equipos necesarios para desempeñar
-                                nuestra actividad empresarial teniendo en cuenta un nivel de producción proyectado
-                                a mediano plazo, definimos nuestro portafolio de productos y servicios y,
-                                estructuramos el equipo de trabajo para desempeñar las actividades necesarias
-                                tendientes a garantizar un crecimiento empresarial importante.
-                            </p>
-                        </div>
-
-                    </div>
-                </div>
-
-                <hr>
-
-                <div class="row g-2">
-                    <div class="col-12 col-sm-4 d-flex justify-content-center align-items-center">
-                        <div class="circle">
-                            <span class="year">2022</span>
-                        </div>
-                    </div>
-                    <div class="col-12 col-sm-8">
-                        <p class="mb-4">
-                            En el año 2022, iniciamos nuestra gestión comercial a nivel local y nacional
-                            encontrando oportunidades de negocio que permitieron incursionar exitosamente
-                            en el mercado con nuestros productos y servicios, cumpliendo con las expectativas
-                            de nuestros clientes a la vez que mejorarando dia a dia nuestros productos,
-                            servicios y procesos.
-                        </p>
-
-                        <p class="mb-4">
-                            En el año 2022, conscientes del compromiso personal y empresarial decidimos unirnos a
-                            la Fundación Reverd-Ser en la gestión ambiental y social enmarcada en devolver a la
-                            naturaleza y al ser lo que por años el ser humano le ha quitado, de esta manera
-                            logramos dejar huella y camino a las futuras generacionnes mediante proyectos de
-                            reforestación, atención a comunidades vulnerables, entre otros.
-                        </p>
-                    </div>
-                </div>
-
-                <hr>
-
-                <div class="row g-2">
-                    <div class="col-12 col-sm-4 d-flex justify-content-center align-items-center">
-                        <div class="circle">
-                            <span class="year">2023</span>
-                        </div>
-                    </div>
-                    <div class="col-12 col-sm-8">
-                        <p class="mb-4">
-                            En el año 2023, la compañía se enfoca en desarrollar nuevos productos y servicios
-                            que requiera la industria y desarrollar su plan estrategico comercial que le
-                            permitirá seguir creciendo en el mercado nacional.
-                        </p>
-                    </div>
-                </div>
-
-                <hr>
-
-            </section>
-
-            <!-- mision-vision -->
-            <section class="mt-5 px-5">
-
-                <div class="iconos_sobre_nosotros">
-                    <img src="../img/icono_mision.webp" alt="icono_mision">
-                    <h3 class="titulo_valores">MISIÓN</h3>
-                </div>
-
-                <p>
-                    Generar excelentes relacionales con nuestros aliados estrategicos mediante la fabricación y
-                    comercialización de
-                    productos y servicios con enfasís en la alta calidad, confiabilidad, y buen servicio.
-                </p>
-
-                <div class="row align-items-center">
-
-                    <div class="col-12 col-sm-6 order-sm-last mb-3">
-                        <img class="w-100" src="../img/image00013.webp" alt="">
-                    </div>
-
-                    <div class="col-12 col-sm-6">
-                        <div class="iconos_sobre_nosotros">
-                            <img src="../img/icono_vision.webp" alt="icono_vision">
-                            <h3 class="titulo_valores">VISIÓN</h3>
-                        </div>
-
-                        <p class="texto fs-5">
-                            Realizar nuestro plan de expansión en los mercados internacionales mediante el
-                            establecimiento
-                            de
-                            sedes productivas
-                            en cada continente.
-                        </p>
-
-                        <div class="iconos_sobre_nosotros mb-2">
-                            <img src="../img/icono_valores.webp" alt="icono_valores">
-                            <h3 class="titulo_valores">VALORES</h3>
-                        </div>
-
-                        <h4>Respeto: </h4>
-
-                        <p class="texto">
-                            En cada uno de nuestros actos.
-                        </p>
-
-                        <h4>Transparencia: </h4>
-
-                        <p class="texto">
-                            Logrando empatía y entendimiento.
-                        </p>
-
-                        <h4>Responsabilidad: </h4>
-
-                        <p class="texto">
-                            Con nuestros aliados, la naturaleza y el entorno.
-                        </p>
-
-                    </div>
-
-                </div>
-
+                <iframe src="../pdf/Brochure digital VALOROS DE COLOMBIA-2023.pdf" width="100%" height="800px"
+                    frameborder="0">
+                </iframe>
             </section>
 
         </main>
@@ -319,7 +183,6 @@
 
     </div>
 
-    <!-- <script src="../js/bootstrap.bundle.min.js"></script> -->
 </body>
 
 </html>
