--- a/contenido/lineaoro.html
+++ b/contenido/lineaoro.html
@@ -52,6 +52,9 @@ In your html page, add the snippet and call gtag_report_conversion when someone 
             <ul class="w-100 pt-5 fs-5">
 
                 <li class="menu-item m-2">
+                    <a class="text-decoration-none" href="/">Inicio</a>
+                </li> 
+                <li class="menu-item m-2">
                     <a class="text-decoration-none" href="corporativo.html">Nuestra historia</a>
                 </li>
                 <li class="menu-item m-2">
@@ -125,31 +128,27 @@ In your html page, add the snippet and call gtag_report_conversion when someone 
 
             <!-- menu:productos-servicios -->
             <section class="p-0 m-0">
-                <nav class="dark p-0 m-0">
-                    <ul class="p-0 m-0">
+            <nav class="p-0 m-0 dark" style="background-color: #1A1A1A;">
+                <ul class="p-0 m-0 w-100">
 
-                        <li class="has-submenu">
-                            <a class="h-100 p-2 d-flex" style="color: #F3B830;" href="#">
-                                Productos
-                                <i class='bx bx-chevron-down fs-2'></i>
-                            </a>
-                            <ul class="submenu">
-                                <li>
-                                    <a class="nav-link" href="lineaoro.html">Linea de Oro</a>
-                                </li>
-                                <li>
-                                    <a class="nav-link" href="lineaplata.html">Linea de Plata</a>
-                                </li>
-                            </ul>
-                        </li>
+                    <li class="d-flex w-100">
+                        <a class="h-100 p-2" href="/#lineaoro"><img src="/img/goldstart.png" alt=""
+                                style="width: 30px;height: 30px;">&nbsp;&nbsp; Linea de Oro</a>
+                    </li>
 
-                        <li>
-                            <a class="h-100 p-2" href="Servicios.html">Servicios Metalúrgicos</a>
-                        </li>
+                    <li class="d-flex w-100">
+                        <a class="h-100 p-2" href="/#lineaplata"><img src="/img/silverstart.png" alt=""
+                                style="width: 30px;height: 30px;"> Linea de Plata</a>
+                    </li>
 
-                    </ul>
-                </nav>
-            </section>
+                    <li class="w-100">
+                        <a class="h-100 p-2 d-flex align-items-center" href="Servicios.html">Servicios
+                            Metalúrgicos</a>
+                    </li>
+
+                </ul>
+            </nav>
+        </section>
             <!-- fin menu:productos-servicios -->
 
             <section class="mt-5 px-5">
