--- a/index.html
+++ b/index.html
@@ -45,6 +45,39 @@ In your html page, add the snippet and call gtag_report_conversion when someone 
 
 <body>
 
+    <div>
+        <input type="checkbox" id="menu-bar" />
+        <aside class="aside d-flex">
+
+            <ul class="w-100 pt-5 fs-5">
+
+                <li class="menu-item m-2">
+                    <a class="text-decoration-none active" href="#">Inicio</a>
+                </li>
+                <li class="menu-item m-2">
+                    <a class="text-decoration-none" href="contenido/corporativo.html">Nuestra historia</a>
+                </li>
+                <li class="menu-item m-2">
+                    <a class="text-decoration-none" href="contenido/compromiso.html">Nuestro compromiso legal</a>
+                </li>
+                <li class="menu-item m-2">
+                    <a class="text-decoration-none" href="contenido/brochure.html">Corporativo</a>
+                </li>
+
+                <li class="menu-item m-2">
+                    <a class="text-decoration-none" href="contenido/sostenibilidad.html">sostenibilidad</a>
+                </li>
+                <li class="menu-item m-2">
+                    <a class="text-decoration-none" href="contenido/contacto.html">Contáctanos</a>
+                </li>
+            </ul>
+
+            <label for="menu-bar" class="close-bar"><img class="w-100" src="../img/close-bold-svgrepo-com.svg"
+                    alt="menu" /></label>
+
+        </aside>
+    </div>
+
     <!-- <div class="container p-0 mb-0"> -->
     <!-- logo-menu -->
     <header class="d-flex justify-content-between m-0 p-0">
@@ -62,7 +95,7 @@ In your html page, add the snippet and call gtag_report_conversion when someone 
         <div class="d-none d-sm-flex justify-content-center">
             <ul class="d-flex h-100 gap-5">
                 <li class="nav-item">
-                    <a class="nav-link fs-5" href="/">Inicio</a>
+                    <a class="nav-link fs-5 active" href="/">Inicio</a>
                 </li>
                 <!-- <li class="nav-item">
                     <a class="nav-link fs-5" href="contenido/sostenibilidad.html">Productos</a>
@@ -74,19 +107,19 @@ In your html page, add the snippet and call gtag_report_conversion when someone 
                     </a>
                     <ul class="submenu py-2" style="background-color: white;z-index: 100; border: 1px solid;">
                         <li>
-                            <a class="nav-link" href="contenido/corporativo.html">Nuestra historia</a>
+                            <a class="nav-link" href="contenido/nuestra-historia.html">Nuestra historia</a>
                         </li>
                         <li>
                             <a class="nav-link" href="contenido/compromiso.html">Nuestro compromiso legal</a>
                         </li>
                         <li>
-                            <a class="nav-link" href="contenido/brochure.html">Corporativo</a>
+                            <a class="nav-link" href="contenido/corporativo.html">Corporativo</a>
                         </li>
                     </ul>
                 </li>
 
                 <li class="nav-item">
-                    <a class="nav-link fs-5" href="contenido/sostenibilidad.html">sostenibilidad</a>
+                    <a class="nav-link fs-5" href="contenido/sostenibilidad.html">Sostenibilidad</a>
                 </li>
 
                 <li class="menu-item">
@@ -101,19 +134,19 @@ In your html page, add the snippet and call gtag_report_conversion when someone 
         <!-- menu:productos-servicios -->
         <section class="p-0 m-0">
             <nav class="p-0 m-0 dark" style="background-color: #1A1A1A;">
-                <ul class="p-0 m-0">
+                <ul class="p-0 m-0 w-100">
 
-                    <li class="d-flex">
+                    <li class="d-flex w-100">
                         <a class="h-100 p-2" href="#lineaoro"><img src="img/goldstart.png" alt=""
-                                style="width: 46px;height: 46px;">&nbsp;&nbsp; Linea de Oro</a>
+                                style="width: 30px;height: 30px;">&nbsp;&nbsp; Linea de Oro</a>
                     </li>
 
-                    <li class="d-flex">
+                    <li class="d-flex w-100">
                         <a class="h-100 p-2" href="#lineaplata"><img src="img/silverstart.png" alt=""
-                                style="width: 46px;height: 46   px;"> Linea de Plata</a>
+                                style="width: 30px;height: 30px;"> Linea de Plata</a>
                     </li>
 
-                    <li>
+                    <li class="w-100">
                         <a class="h-100 p-2 d-flex align-items-center" href="contenido/Servicios.html">Servicios
                             Metalúrgicos</a>
                     </li>
@@ -162,9 +195,9 @@ In your html page, add the snippet and call gtag_report_conversion when someone 
                 <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 row-cols-lg-4 g-5 justify-content-center">
 
                     <div class="col">
-                        <a href="contenido/oropuro.html" class="card-link d-block h-100">
+                        <a href="contenido/oro-puro.html" class="card-link d-block h-100">
                             <div class="card product-card h-100" style="background-color: #1A1A1A;">
-                                <img src="img/oro.webp" class="card-img-top" alt="Imagen de Oro Pura">
+                                <img src="img/oro.webp" class="card-img-top" alt="Oro de 24 quilates">
                                 <div class="card-body">
                                     <h5 class="card-title text-white">Oro Puro</h5>
                                     <p class="card-text text-white-50">
@@ -177,7 +210,7 @@ In your html page, add the snippet and call gtag_report_conversion when someone 
                     </div>
 
                     <div class="col">
-                        <a href="contenido/hilo_oro.html" class="card-link d-block h-100">
+                        <a href="contenido/hilo-de-oro.html" class="card-link d-block h-100">
                             <div class="card product-card h-100" style="background-color: #1A1A1A;">
                                 <img src="img/hilo de oro4.png" class="card-img-top" alt="Hilo de Oro">
                                 <div class="card-body">
@@ -214,9 +247,9 @@ In your html page, add the snippet and call gtag_report_conversion when someone 
                 <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 row-cols-lg-4 g-5 justify-content-center">
 
                     <div class="col">
-                        <a href="contenido/nitrato_plata.html" class="card-link d-block h-100">
+                        <a href="contenido/nitrato-de-plata.html" class="card-link d-block h-100">
                             <div class="card product-card h-100" style="background-color: #1A1A1A;">
-                                <img src="../img/nitrato.jpg" class="card-img-top" alt="Imagen de Plata Pura">
+                                <img src="../img/nitrato.jpg" class="card-img-top" alt="nitrato de plata">
                                 <div class="card-body">
                                     <h5 class="card-title text-white">Nitrato de Plata</h5>
                                     <p class="card-text text-white-50">
@@ -228,7 +261,7 @@ In your html page, add the snippet and call gtag_report_conversion when someone 
                     </div>
 
                     <div class="col">
-                        <a href="contenido/cianuro_plata.html" class="card-link d-block h-100">
+                        <a href="contenido/cianuro-de-plata.html" class="card-link d-block h-100">
                             <div class="card product-card h-100" style="background-color: #1A1A1A;">
                                 <img src="img/silver cyanide.png" class="card-img-top" alt="Cianuro de plata">
                                 <div class="card-body">
@@ -243,9 +276,9 @@ In your html page, add the snippet and call gtag_report_conversion when someone 
                     </div>
 
                     <div class="col">
-                        <a href="contenido/cianuro_plata_potasio.html" class="card-link d-block h-100">
+                        <a href="contenido/cianuro-de-plata-potasio.html" class="card-link d-block h-100">
                             <div class="card product-card h-100" style="background-color: #1A1A1A;">
-                                <img src="../img/nitrato.jpg" class="card-img-top" alt="Imagen de Cianuro de plata potasio">
+                                <img src="../img/nitrato.jpg" class="card-img-top" alt="Cianuro de plata potasio">
                                 <div class="card-body">
                                     <h5 class="card-title text-white">Cianuro de Plata Potasio</h5>
                                     <p class="card-text text-white-50">
@@ -257,9 +290,9 @@ In your html page, add the snippet and call gtag_report_conversion when someone 
                     </div>
 
                      <div class="col">
-                        <a href="contenido/anodo_plata.html" class="card-link d-block h-100">
+                        <a href="contenido/anodo-de-plata.html" class="card-link d-block h-100">
                             <div class="card product-card h-100" style="background-color: #1A1A1A;">
-                                <img src="../img/Anodos.jpg" class="card-img-top" alt="Imagen de Plata Pura">
+                                <img src="../img/Anodos.jpg" class="card-img-top" alt="anodo de plata">
                                 <div class="card-body">
                                     <h5 class="card-title text-white">Ánodos de Plata</h5>
                                     <p class="card-text text-white-50">
@@ -271,7 +304,7 @@ In your html page, add the snippet and call gtag_report_conversion when someone 
                     </div>
 
                     <div class="col">
-                        <a href="contenido/hilo_plata.html" class="card-link d-block h-100">
+                        <a href="contenido/hilo-de-plata.html" class="card-link d-block h-100">
                             <div class="card product-card h-100" style="background-color: #1A1A1A;">
                                 <img src="img/Hilo plata-Photo.jpg" class="card-img-top" alt="Hilo de Plata">
                                 <div class="card-body">
@@ -286,9 +319,9 @@ In your html page, add the snippet and call gtag_report_conversion when someone 
                     </div>
 
                     <div class="col">
-                        <a href="contenido/plata_pura.html" class="card-link d-block h-100">
+                        <a href="contenido/plata-pura.html" class="card-link d-block h-100">
                             <div class="card product-card h-100" style="background-color: #1A1A1A;">
-                                <img src="../img/plata.jpg" class="card-img-top" alt="Imagen de Plata Pura">
+                                <img src="../img/plata.jpg" class="card-img-top" alt="Plata Pura">
                                 <div class="card-body">
                                     <h5 class="card-title text-white">Plata Pura</h5>
                                     <p class="card-text text-white-50">
