--- a/contenido/Servicios.html
+++ b/contenido/Servicios.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description"
         content="VALOROS DE COLOMBIA ofrece servicios metalúrgicos especializados en fundición y refinación de metales preciosos como oro y plata. Pureza certificada de 99,99% según requerimientos del cliente.">
-    <title>Valoros</title>
+    <title>Servicios metalúrgicos | VALOROS</title>
     <link rel="stylesheet" href="../css/bootstrap.css" />
     <link rel="stylesheet" href="../css/valoros.css" />
     <link rel="icon" href="../img/LogoValoros -icono.ico" />
@@ -53,6 +53,9 @@ In your html page, add the snippet and call gtag_report_conversion when someone 
             <ul class="w-100 pt-5 fs-5">
 
                 <li class="menu-item m-2">
+                    <a class="text-decoration-none" href="/">Inicio</a>
+                </li>
+                <li class="menu-item m-2">
                     <a class="text-decoration-none" href="corporativo.html">Nuestra historia</a>
                 </li>
                 <li class="menu-item m-2">
@@ -63,7 +66,7 @@ In your html page, add the snippet and call gtag_report_conversion when someone 
                 </li>
 
                 <li class="menu-item m-2">
-                    <a class="text-decoration-none" href="sostenibilidad.html">sostenibilidad</a>
+                    <a class="text-decoration-none" href="sostenibilidad.html">Sostenibilidad</a>
                 </li>
                 <li class="menu-item m-2">
                     <a class="text-decoration-none" href="contacto.html">Contáctanos</a>
@@ -90,7 +93,7 @@ In your html page, add the snippet and call gtag_report_conversion when someone 
             <!-- icono menu -->
             <div class="d-flex d-sm-none w-100 justify-content-end" style="align-items: center">
                 <label for="menu-bar" class="" style="width: 18%">
-                    <img class="w-100" src="img/menu.svg" alt="menu" /></label>
+                    <img class="w-100" src="/img/menu.svg" alt="menu" /></label>
             </div>
 
             <div class="d-none d-sm-flex justify-content-center">
@@ -103,29 +106,29 @@ In your html page, add the snippet and call gtag_report_conversion when someone 
                     </li> -->
 
                     <li class="has-submenu" style="position: relative;">
-                        <a class="nav-link fs-5 d-flex" href="#">Nosotros
-                            <i class='bx bx-chevron-down fs-2'></i>
-                        </a>
-                        <ul class="submenu py-2" style="background-color: white;z-index: 100; border: 1px solid;">
-                            <li>
-                                <a class="nav-link" href="corporativo.html">Nuestra historia</a>
-                            </li>
-                            <li>
-                                <a class="nav-link" href="compromiso.html">Nuestro compromiso legal</a>
-                            </li>
-                            <li>
-                                <a class="nav-link" href="brochure.html">Corporativo</a>
-                            </li>
-                        </ul>
-                    </li>
+                    <a class="nav-link fs-5 d-flex" href="#">Nosotros
+                        <i class='bx bx-chevron-down fs-2'></i>
+                    </a>
+                    <ul class="submenu py-2" style="background-color: white;z-index: 100; border: 1px solid;">
+                        <li>
+                            <a class="nav-link" href="nuestra-historia.html">Nuestra historia</a>
+                        </li>
+                        <li>
+                            <a class="nav-link" href="compromiso.html">Nuestro compromiso legal</a>
+                        </li>
+                        <li>
+                            <a class="nav-link" href="corporativo.html">Corporativo</a>
+                        </li>
+                    </ul>
+                </li>
 
-                    <li class="nav-item">
-                        <a class="nav-link fs-5" href="sostenibilidad.html">sostenibilidad</a>
-                    </li>
+                <li class="nav-item">
+                    <a class="nav-link fs-5" href="sostenibilidad.html">sostenibilidad</a>
+                </li>
 
-                    <li class="menu-item">
-                        <a class="text-decoration-none text-white" href="contacto.html">Contáctanos</a>
-                    </li>
+                <li class="menu-item">
+                    <a class="text-decoration-none text-white" href="contacto.html">Contáctanos</a>
+                </li>
                 </ul>
             </div>
         </header>
@@ -135,23 +138,24 @@ In your html page, add the snippet and call gtag_report_conversion when someone 
             <!-- menu:productos-servicios -->
             <section class="p-0 m-0">
                 <nav class="p-0 m-0 dark" style="background-color: #1A1A1A;">
-                    <ul class="p-0 m-0">
+                    <ul class="p-0 m-0 w-100">
 
-                        <li class="d-flex">
-                            <a class="h-100 p-2" href="/#lineaoro"><img src="/img/goldstart.png" alt=""
-                                    style="width: 46px;height: 40px;">&nbsp;&nbsp; Linea de Oro</a>
-                        </li>
+                    <li class="d-flex w-100">
+                        <a class="h-100 p-2" href="/#lineaoro"><img src="/img/goldstart.png" alt=""
+                                style="width: 30px;height: 30px;">&nbsp;&nbsp; Linea de Oro</a>
+                    </li>
 
-                        <li class="d-flex">
-                            <a class="h-100 p-2" href="/#lineaplata"><img src="/img/silverstart.png" alt="" style="width: 46px;height: 40px;"> Linea de Plata</a>
-                        </li>
+                    <li class="d-flex w-100">
+                        <a class="h-100 p-2" href="/#lineaplata"><img src="/img/silverstart.png" alt=""
+                                style="width: 30px;height: 30px;"> Linea de Plata</a>
+                    </li>
 
-                        <li>
-                            <a class="h-100 p-2 d-flex align-items-center bg-warning" href="Servicios.html">Servicios
-                                Metalúrgicos</a>
-                        </li>
+                    <li class="w-100">
+                        <a class="h-100 p-2 d-flex align-items-center" href="Servicios.html">Servicios
+                            Metalúrgicos</a>
+                    </li>
 
-                    </ul>
+                </ul>
                 </nav>
             </section>
 
